<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuessThatImage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Please Login WIth Your Account!</string>
    <string name="enter_username">Please Enter Your User Name:</string>
    <string name="enter_password">Please Enter Your Password:</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="new_user">Sign up new account</string>
    <string name="splash_title">Hopefully We Will Have a Nice Splash Screen</string>
    <string name="title">Guess That Image!</string>
    <string name="new_game">Start New Game</string>
    <string name="settings">Game Settings</string>
    <string name="help">Help</string>
    <string name="leader_board">Leader Board</string>
    <string name="title_activity_game_session">GameSession</string>
    <string name="settings_title">System Settings</string>
    <string name="settings_summary">Set the game time and number of images be given</string>
    <string name="time_setting_title">Time</string>
    <string name="time_setting_summary">Set the time of game</string>
    <string name="number_setting_title">Number of picture</string>
    <string name="number_setting_summary">Set the number of pictures be given per word</string>
    <string name="time_setting_key">time_setting</string>
    <string name="number_setting_key">number_setting</string>
    <string name="settings_key">settings</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="time_default">10</string>
    <string name="number_default">4</string>
    <string name="title_activity_game">Game</string>
    <string name="create_new_account">Sign Up For New Account</string>
    <string name="new_username">Enter Username:</string>
    <string name="new_password">Enter Password:</string>
    <string name="confirm_password">Comfirm Your Password</string>
    <string name="signup_done">Sign up!</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_leader_board">LeaderBoard</string>
    <string name="leader_board_title">Leader Board</string>
    <string name="title_activity_help">Help</string>
    
    <string name="introduction">In this game, each time you will be given a collection of images retrieved from Google image search engine using a single word, and you need to guess which word is used. You will gain points through correct guessing. Bad guessing won’t decrease your points, but your time is limited. Your can also skip hard word, which will results in losing points. You can set the time and number of images given to you in the game setting menu.</string>

</resources>