<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView  
    	android:text="@string/title"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_gravity="center"
		android:textSize="20sp"
	/>
    
    <LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_gravity="center" >
	<Button
		android:id="@+id/buttonNewGame"
		android:text="@string/new_game"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/buttonSettings"
		android:text="@string/settings"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/buttonHelp"
		android:text="@string/help"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/buttonLeaderBoard"
		android:text="@string/leader_board"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/buttonExit"
		android:text="@string/exit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	</LinearLayout>
    

</LinearLayout>
